FIX: Floating label z-index fix

--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,11 @@
   font-weight: 400;
   line-height: 1.22;
   color: rgba(171, 129, 108, 0.5);
-  z-index: -1;
 }
 
 .input {
+  position: relative;
+  z-index: 1;
   display: block;
   height: 20px;
   width: 100%;
